[metadata]
name = wsknn
description = Weighted session-based model for recommendations
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
version = attr: wsknn.__version__
url = https://github.com/nokaut/wsknn
author = Szymon Moliński
author_email = s.molinski@digitree.pl
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    Topic :: Internet :: WWW/HTTP :: Session
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Information Analysis
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
project_urls =
    Documentation = https://readthedocs.org/projects/wsknn/
    Source = https://github.com/nokaut/wsknn
    Tracker = https://github.com/nokaut/wsknn/issues

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    more_itertools
    pyyaml
    tqdm
    pandas
[options.packages.find]
exclude =
    tests*
    tests
    dev*
    docs*
    paper*
    demo-notebooks*
    imgs*

[options.package_data]
* = *.txt, *.rst